tests/spec/emit/snapshots/go_interface_method_err_result_type.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:context"
  import "go:fmt"
  
  fn main() {
    let ctx = context.Background()
    let err = ctx.Err()
    fmt.Println(f"err={err}")
  }
---
package main

import (
	"context"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ctx := context.Background()
	raw := ctx.Err()
	err := lisette.OptionFromNilable[error](raw, lisette.IsNilInterface(raw))
	fmt.Printf("err=%v\n", err)
}
