tests/spec/emit/snapshots/go_keyword_for_loop_binding.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> int {
    let mut total = 0;
    for range in [1, 2, 3] {
      total += range;
    }
    total
  }
---
package main

func test() int {
	total := 0
	for _, range_ := range []int{1, 2, 3} {
		total += range_
	}
	return total
}
