tests/spec/emit/snapshots/go_keyword_function_name.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn map(x: int) -> int {
    x * 2
  }
  
  fn range(x: int) -> int {
    x + 1
  }
  
  fn test() -> int {
    map(5) + range(10)
  }
---
package main

func map_(x int) int {
	return x * 2
}

func range_(x int) int {
	return x + 1
}

func test() int {
	return map_(5) + range_(10)
}
