tests/spec/emit/snapshots/go_keyword_function_parameter.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn use_map(map: int, range: int) -> int {
    map + range
  }
  
  fn test() -> int {
    use_map(10, 20)
  }
---
package main

func useMap(map_, range_ int) int {
	return map_ + range_
}

func test() int {
	return useMap(10, 20)
}
