tests/spec/emit/snapshots/go_keyword_lambda_parameter.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> int {
    let f = |map: int, range: int| map + range;
    f(10, 20)
  }
---
package main

func test() int {
	f := func(map_, range_ int) int {
		return map_ + range_
	}
	return f(10, 20)
}
