tests/spec/emit/snapshots/go_keyword_match_binding.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> int {
    let x = Some(42);
    match x {
      Some(map) => map,
      None => 0,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	x := lisette.MakeOptionSome(42)
	if x.Tag == lisette.OptionSome {
		return x.SomeVal
	}
	return 0
}
