tests/spec/emit/snapshots/go_keyword_variable_name.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> int {
    let map = 42;
    let range = 10;
    map + range
  }
---
package main

func test() int {
	map_ := 42
	range_ := 10
	return map_ + range_
}
